<resources>
    <string name="app_name">BottomSheetExemplo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="primeiro_texto">Primeiro Texto</string>
    <string name="segundo_texto">Segundo Texto</string>
    <string name="salvar_colaborador">Salvar Colaborador</string>
    <string name="email">Email</string>
    <string name="endereco">Endereço</string>
    <string name="cpf">CPF</string>
    <string name="cargo">Cargo</string>
    <string name="nome">Nome</string>
    <string name="editar_foto">Editar Foto</string>
    <string name="foto_colaborador">Foto Colaborador</string>
    <string name="colaborador_fragment">Colaborador Fragment</string>
    <string name="item_fragment">Item Fragment</string>
</resources>
